# bankkk

./: Admin.cpp  Admin.h  CMakeLists.txt  Client.cpp  Client.h  DataSourceInterface.cpp  DataSourceInterface.h  Employee.cpp  Employee.h  FileManger.cpp  FileManger.h  FilesHelper.cpp  FilesHelper.h  Parser.cpp  Parser.h  Person.cpp  Person.h  Validation.cpp  Validation.h  main.cpp
output/: Adminfile  Adminfile.txt  Clientfile  Clientfile.txt  Employeefile  Employeefile.txt
